Fixed Readability of Tabs

--- a/src/AtlasLegend.scss
+++ b/src/AtlasLegend.scss
@@ -602,7 +602,7 @@
   align-items: center;
   justify-content: center;
   line-height: 1;
-  color: hsl(var(--atlas-color-dark) / var(--atlas-opacity-2));
+  color: hsl(var(--atlas-color-dark) / var(--atlas-opacity-3));
   text-transform: uppercase;
   font-weight: 900;
   user-select: none;
